--- a/Problem_1.ipynb
+++ b/Problem_1.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,9 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from lib.mlp.fully_conn import *\n",
     "from lib.mlp.layer_utils import *\n",
@@ -38,7 +46,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,9 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: data_train Shape: (40000, 32, 32, 3), <class 'numpy.ndarray'>\n",
+      "Name: labels_train Shape: (40000,), <class 'numpy.ndarray'>\n",
+      "Name: data_val Shape: (10000, 32, 32, 3), <class 'numpy.ndarray'>\n",
+      "Name: labels_val Shape: (10000,), <class 'numpy.ndarray'>\n",
+      "Name: data_test Shape: (10000, 32, 32, 3), <class 'numpy.ndarray'>\n",
+      "Name: labels_test Shape: (10000,), <class 'numpy.ndarray'>\n",
+      "label_names: ['aquatic_mammals', 'fish', 'flowers', 'food_containers', 'fruit_and_vegetables', 'household_electrical_devices', 'household_furniture', 'insects', 'large_carnivores', 'large_man-made_outdoor_things', 'large_natural_outdoor_scenes', 'large_omnivores_and_herbivores', 'medium_mammals', 'non-insect_invertebrates', 'people', 'reptiles', 'small_mammals', 'trees', 'vehicles_1', 'vehicles_2']\n",
+      "Name: mean_image Shape: (1, 1, 1, 3), <class 'numpy.ndarray'>\n",
+      "Name: std_image Shape: (1, 1, 1, 3), <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "data = CIFAR100_data('data/cifar100/')\n",
     "for k, v in data.items():\n",
@@ -91,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference:  4.0260162945880345e-09\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -136,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx Error:  9.620592313843554e-10\n",
+      "dw Error:  2.1361556274213285e-09\n",
+      "db Error:  1.3114182256132094e-10\n",
+      "dinp Shape:  (15, 2, 2, 3) (15, 2, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -174,7 +216,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -192,9 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference:  1.8037541876132445e-08\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -213,7 +262,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -223,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx Error:  7.488720245364856e-09\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -256,9 +312,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "Dropout Keep Prob =  0\n",
+      "Mean of input:  4.982220120957985\n",
+      "Mean of output during training time:  4.982220120957985\n",
+      "Mean of output during testing time:  4.982220120957985\n",
+      "Fraction of output set to zero during training time:  0.0\n",
+      "Fraction of output set to zero during testing time:  0.0\n",
+      "----------------------------------------------------------------\n",
+      "Dropout Keep Prob =  0.25\n",
+      "Mean of input:  4.982220120957985\n",
+      "Mean of output during training time:  5.05528991708941\n",
+      "Mean of output during testing time:  4.982220120957985\n",
+      "Fraction of output set to zero during training time:  0.7461\n",
+      "Fraction of output set to zero during testing time:  0.0\n",
+      "----------------------------------------------------------------\n",
+      "Dropout Keep Prob =  0.5\n",
+      "Mean of input:  4.982220120957985\n",
+      "Mean of output during training time:  4.99867337493449\n",
+      "Mean of output during testing time:  4.982220120957985\n",
+      "Fraction of output set to zero during training time:  0.4986\n",
+      "Fraction of output set to zero during testing time:  0.0\n",
+      "----------------------------------------------------------------\n",
+      "Dropout Keep Prob =  0.75\n",
+      "Mean of input:  4.982220120957985\n",
+      "Mean of output during training time:  4.9712373352555375\n",
+      "Mean of output during testing time:  4.982220120957985\n",
+      "Fraction of output set to zero during training time:  0.2517\n",
+      "Fraction of output set to zero during testing time:  0.0\n",
+      "----------------------------------------------------------------\n",
+      "Dropout Keep Prob =  1\n",
+      "Mean of input:  4.982220120957985\n",
+      "Mean of output during training time:  4.982220120957985\n",
+      "Mean of output during testing time:  4.982220120957985\n",
+      "Fraction of output set to zero during training time:  0.0\n",
+      "Fraction of output set to zero during testing time:  0.0\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -291,9 +390,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx relative error:  3.003118133329487e-11\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -311,7 +418,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -324,9 +430,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  1.8479717579497958e-10\n",
+      "dw error:  8.125163629253895e-10\n",
+      "db error:  4.291407408707894e-11\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -340,8 +456,8 @@
     "###################################################\n",
     "# TODO: param_name should be replaced accordingly #\n",
     "###################################################\n",
-    "tiny_net.net.assign(\"param_name_w\", w)\n",
-    "tiny_net.net.assign(\"param_name_b\", b)\n",
+    "tiny_net.net.assign(\"fc_w\", w)\n",
+    "tiny_net.net.assign(\"fc_b\", b)\n",
     "###################################################\n",
     "#                END OF YOUR CODE                 #\n",
     "###################################################\n",
@@ -352,8 +468,8 @@
     "###################################################\n",
     "# TODO: param_name should be replaced accordingly #\n",
     "###################################################\n",
-    "dw = tiny_net.net.get_grads(\"param_name_w\")\n",
-    "db = tiny_net.net.get_grads(\"param_name_b\")\n",
+    "dw = tiny_net.net.get_grads(\"fc_w\")\n",
+    "db = tiny_net.net.get_grads(\"fc_b\")\n",
     "###################################################\n",
     "#                END OF YOUR CODE                 #\n",
     "###################################################\n",
@@ -369,7 +485,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -380,9 +495,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label[2 1 1 0 5 2 0 2 4 4 4 1 2 1 5 5 3 1 1 2 3 1 4 4 0 3 2 5 3 4 0 1 4 0 2 4 5\n",
+      " 5 3 5 1 2 4 4 4 5 5 4 0 0 1 0 1 0 5 2 3 4 1 5 1 4 2 5 5 4 0 0 4 3 0 3 0 2\n",
+      " 3 3 2 1 3 0 0 4 4 1 1 2 1 5 1 5 4 3 4 2 4 5 0 5 4 4]\n",
+      "Cross Entropy Loss:  1.7917920524829998\n",
+      "dx error:  0.0012384982346545755\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext autoreload\n",
     "\n",
@@ -404,7 +531,26 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(100, 6)"
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -548,7 +694,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -586,7 +731,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -685,7 +829,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -695,7 +838,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -747,7 +889,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -827,7 +968,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -894,7 +1034,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -974,7 +1113,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1051,7 +1189,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1136,7 +1273,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1153,7 +1289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1167,7 +1303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
